.k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crawl-and-search-ingress
spec:
  rules:
    - host: crawlandsearch.info
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-service
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: api-service
              port:
                number: 8080
